// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="pull-left note"
>
  onboarding.project_watcher.not_started
</div>
`;

exports[`renders 2`] = `
<div
  className="pull-left note"
>
  <i
    className="spinner spacer-right"
  />
  onboarding.project_watcher.in_progress
</div>
`;

exports[`renders 3`] = `
<div
  className="pull-left note display-inline-flex-center"
>
  <AlertSuccessIcon
    className="spacer-right"
  />
  onboarding.project_watcher.finished
</div>
`;

exports[`renders 4`] = `
<div
  className="pull-left note"
>
  <i
    className="spinner spacer-right"
  />
  onboarding.project_watcher.in_progress
</div>
`;
